<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivDeletePin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="12dp"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:src="@drawable/ic_logo_mail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEnterPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/enter_PIN"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContainerEllipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvEnterPin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ellipse1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ellipse_empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ellipse2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:src="@drawable/ic_ellipse_empty"
            app:layout_constraintStart_toEndOf="@id/ellipse1"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ellipse3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:src="@drawable/ic_ellipse_empty"
            app:layout_constraintStart_toEndOf="@id/ellipse2"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ellipse4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:src="@drawable/ic_ellipse_empty"
            app:layout_constraintStart_toEndOf="@id/ellipse3"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@id/clContainerEllipse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/number1"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:backgroundTint="#1AFFFFFF"
            android:focusable="true"
            android:clickable="true"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_one"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/number2"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="28dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/number1">

            <TextView
                android:id="@+id/tvTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_two"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/number3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="28dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/number2">

            <TextView
                android:id="@+id/tvTree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_tree"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/number4"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/number1"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_four"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/number5"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="28dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/number2"
            app:layout_constraintStart_toEndOf="@id/number4">

            <TextView
                android:id="@+id/tvFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_five"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/number6"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="28dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/number3"
            app:layout_constraintStart_toEndOf="@id/number5">

            <TextView
                android:id="@+id/tvSix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_six"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/number7"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/number4"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_seven"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/number8"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="28dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/number5"
            app:layout_constraintStart_toEndOf="@id/number7">

            <TextView
                android:id="@+id/tvEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_eight"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/number9"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="28dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/number6"
            app:layout_constraintStart_toEndOf="@id/number8">

            <TextView
                android:id="@+id/tvNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:includeFontPadding="true"
                android:paddingHorizontal="20dp"
                android:text="@string/tv_nine"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/ivShape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:padding="14dp"
            android:src="@drawable/ic_shape"
            android:focusable="true"
            android:clickable="true"
            android:background="#00000000"
            app:layout_constraintStart_toStartOf="@id/number7"
            app:layout_constraintTop_toBottomOf="@id/number7"
            app:layout_constraintEnd_toEndOf="@id/number7"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/number0"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="#1AFFFFFF"
            app:cardCornerRadius="100dp"
            app:layout_constraintTop_toBottomOf="@id/number8"
            app:layout_constraintStart_toStartOf="@id/number8">

            <TextView
                android:id="@+id/tvZero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:includeFontPadding="true"
                android:text="@string/tv_zero"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp"/>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:padding="14dp"
            android:focusable="true"
            android:clickable="true"
            android:src="@drawable/ic_pin_delete"
            app:layout_constraintTop_toBottomOf="@id/number9"
            app:layout_constraintStart_toStartOf="@id/number9"
            app:layout_constraintEnd_toEndOf="@id/number9"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>